# axionax-core-universe

./: .clinerules  Cargo.toml  README.md
.github/: copilot-instructions.md
core/: .env.example  CHANGELOG.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DEVELOPMENT_SUMMARY.md  Makefile  QUICK_START.md  README.md  clippy.toml  pyproject.toml
core/benches/: blockchain_bench.rs  crypto_bench.rs
core/bridge/rust-python/: Cargo.toml
core/bridge/rust-python/src/: lib.rs  simple_wrapper.rs
core/core/blockchain/: Cargo.toml
core/core/blockchain/src/: lib.rs  mempool.rs  validation.rs
core/core/config/src/: lib.rs
core/core/consensus/src/: lib.rs
core/core/crypto/: Cargo.toml
core/core/crypto/src/: lib.rs
core/core/network/: Cargo.toml  README.md
core/core/network/src/: behaviour.rs  config.rs  lib.rs  manager.rs  protocol.rs
core/core/network/tests/: integration_test.rs
core/core/node/: Cargo.toml
core/core/node/examples/: full_node.rs
core/core/node/src/: lib.rs
core/core/rpc/: Cargo.toml
core/core/rpc/examples/: state_rpc_integration.rs
core/core/rpc/src/: health.rs  lib.rs  middleware.rs
core/core/state/: Cargo.toml
core/core/state/src/: lib.rs
core/deai/: README.md  asr.py  bridge_test.py  requirements.txt
core/docs/: API_REFERENCE.md
core/environments/testnet/Axionax_v1.5_Testnet_in_a_Box/deployer/: deploy_token.js  package.json
core/environments/testnet/Axionax_v1.5_Testnet_in_a_Box/faucet/: index.js  package.json
core/environments/testnet/Axionax_v1.5_Testnet_in_a_Box/proto/: server.js
core/environments/testnet/Axionax_v1.5_Testnet_in_a_Box/scripts/deployer/: deploy_token.js
core/environments/testnet/Axionax_v1.5_Testnet_in_a_Box/scripts/faucet/: index.js
core/environments/testnet/Axionax_v1.6_Testnet_in_a_Box/deployer/: deploy_token.js  package.json
core/environments/testnet/Axionax_v1.6_Testnet_in_a_Box/faucet/: index.js  package.json
core/src/: health.rs  lib.rs
core/tools/: GENESIS_LAUNCH_README.md  create_genesis.py  genesis.json  verify_genesis.py
core/tools/faucet/: Cargo.toml
core/tools/faucet/src/: main.rs
